experiment/openrouter-run/stage3-rac/zero_shot/compile_logs/MulLoop.log
warning: [options] system modules path not set in conjunction with -source 11
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/MulLoop/MulLoop.java:10: error: Loop specifications must immediately precede a loop statement
          @ loop_invariant 0 <= i && i <= b;
            ^
1 error
1 warning
